# smol

./: .mxproject  Bridging-Header.h  BridgingHeader.h  CMakeLists.txt  Makefile  ReadMe.md  STM32F429ZITx_FLASH.ld  SingleCoreAllocator.swift  Startup.c  Support.c  Swift_STM.ioc  compile_commands.json  engine.swift  hello.swift  main.c  test_alloc.swift
Core/Inc/: SEGGER_RTT.h  SEGGER_RTT_Conf.h  dma2d.h  ltdc.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  usart.h
Core/Src/: SEGGER_RTT.c  SEGGER_RTT_printf.c  dma2d.c  fmc.c  gpio.c  i2c.c  ltdc.c  main.c  spi.c  stm32f4xx_it.c  usart.c
Drivers/BSP/Components/i3g4250d/: Release_Notes.html  i3g4250d.c  i3g4250d.h
Drivers/BSP/STM32F429I-Discovery/: ModuleAstyle.sh  Release_Notes.html  stm32f429i_discovery.c  stm32f429i_discovery.h  stm32f429i_discovery_eeprom.c  stm32f429i_discovery_eeprom.h  stm32f429i_discovery_gyroscope.c  stm32f429i_discovery_gyroscope.h  stm32f429i_discovery_io.c  stm32f429i_discovery_io.h  stm32f429i_discovery_lcd.c  stm32f429i_discovery_lcd.h  stm32f429i_discovery_sdram.c  stm32f429i_discovery_sdram.h  stm32f429i_discovery_ts.c  stm32f429i_discovery_ts.h
Drivers/STM32F429I-Discovery/: stm32f429i_discovery.c  stm32f429i_discovery.h
Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_exti.c
Game/: Bridging-Header.h  Core.swift  Engine.swift  Renderer.swift  Screen.swift  Sprite.swift  Utils.swift  engine.swift  game.swift
Game/Assets/: Alien.c  Zombie.c
Game/Inc/: screen.h
Game/Src/: PixelData.c  screen.c
Inc/: main.h  stm32f4xx_it.h
Src/: gpio.c  main.c  stm32f4xx_it.c
(+17 files in other folders)
